--- a/src/sqlcode/wwwroot/not-supported.html
+++ b/src/sqlcode/wwwroot/not-supported.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="vb spa demo">
+    <meta name="description" content="">
     <meta name="author" content="vb">
 
     <title>Not supported! &nbsp;&#128534;</title>
@@ -16,7 +16,7 @@
     </div>
 
     <div style="margin-top: 25px;">
-        Please download latest Chrome, Firefox, Edge, Safari or Opera to use this application.
+        Download latest Chrome, Firefox, Edge, Safari or Opera to use this application.
     </div>
 
 </body>
