--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" id="_spa">
-        window._spa = {version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "spa", settings: {usePreloadedTemplates: false}};
-    </script>
-    <script>
-        var require = {baseUrl: window._spa.appUrl};
-        if (window._spa && window._spa.version) {
-            require.urlArgs = "v=" + window._spa.version;
-        }
-    </script>
+    <script type="text/javascript" id="_spa">window._spa = {version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "spa", settings: {usePreloadedTemplates: false}};</script>
+    <script>var require = {baseUrl: window._spa.appUrl}; if (window._spa && window._spa.version) {require.urlArgs = "v=" + window._spa.version;}</script>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="vb spa demo">
+    <meta name="description" content="">
     <meta name="author" content="vb">
 
-    <title>SPA app demo</title>
+    <title></title>
 
     <script id="_css">
-        var u = (window._spa.cssUrl ? window._spa.cssUrl : "") + "/", 
-            q = window._spa.version ? "?" + require.urlArgs : "";
+        var u = (window._spa.cssUrl ? window._spa.cssUrl : "") + "/", q = window._spa.version ? "?" + require.urlArgs : "";
         document.write(
-            '<link rel="stylesheet" href="' + u + 'bootstrap.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'default.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'navigation.css"' + q + '" />'
+            '<link rel="stylesheet" href="' + u + 'index.css"' + q + '" />' +
+            '<link rel="stylesheet" href="' + u + 'toolbar.css"' + q + '" />' +
+            '<link rel="stylesheet" href="' + u + 'footer.css"' + q + '" />'
         );
     </script>
 </head>
 <body>
 
-    <div id="loading-screen" style="display: none"></div>
+    <div id="loading-screen" style="display: none" class="align-center"></div>
     <script type="text/javascript">
-        document.getElementById("loading-screen").innerHTML = "Detecting features...";
+        document.getElementById("loading-screen").innerHTML = "&#8987;";
         document.write('<script src="' + (window._spa && window._spa.libsUrl ? window._spa.libsUrl : "") + '/feature-detect.js">\x3C/script>');
     </script>
     <script id="loading-screen-script" type="text/javascript">
@@ -43,7 +37,6 @@
             }
         }
         var e = document.getElementById("loading-screen");
-        e.innerHTML = "Loading...";
         setTimeout(function(){e.removeAttribute("style")}, 500);
     })()
     </script>
@@ -68,9 +61,7 @@
                 libs: libs,
                 text: ["https://cdnjs.cloudflare.com/ajax/libs/require-text/2.0.12/text.min", "libs/text"],
                 sys: sysUrl,
-                template: sysUrl + "template",
-                "cors-text": sysUrl + "cors-text",
-                "cors-template": sysUrl + "cors-template"
+                template: sysUrl + "template"
             }
         });
     </script>
