--- a/src/sqlcode/wwwroot/app/layout.html
+++ b/src/sqlcode/wwwroot/app/layout.html
@@ -1,11 +1,11 @@
 <div id="toolbar" class="control">
     <div>
-        <div class="tbarBtn align-center">&#128464;</div>
-        <div class="tbarBtn align-center">&#8694;</div>
-        <div class="tbarBtn align-center">&#128270;</div>
+        <div class="tbarBtn align-center icon-doc">&nbsp;</div>
+        <div class="tbarBtn align-center icon-database">&nbsp;</div>
+        <div class="tbarBtn align-center icon-search">&nbsp;</div>
     </div>
     <div>
-        <div class="tbarBtn align-center bottomBtn">&#9776;</div>
+        <div class="tbarBtn align-center bottomBtn icon-menu">&nbsp;</div>
     </div>
 </div>
 <div class="splitter" id="main-area">
