--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -17,7 +17,8 @@
             '<link rel="stylesheet" href="' + u + 'default.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'index.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'toolbar.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'footer.css"' + q + '" />'
+            '<link rel="stylesheet" href="' + u + 'footer.css"' + q + '" />' +
+            '<link rel="stylesheet" href="' + u + 'icons.css"' + q + '" />'
         );
     </script>
 </head>
