--- a/src/sqlcode/wwwroot/app/layout.html
+++ b/src/sqlcode/wwwroot/app/layout.html
@@ -8,15 +8,16 @@
         <div class="tbarBtn align-center bottomBtn icon-menu">&nbsp;</div>
     </div>
 </div>
-<div class="splitter" id="main-area">
-    <!--
-    <div class="splitter-panel" id="left">
+<div class="" id="main" data-bla-blah="true">
+
+    <div id="left">
         explorer
     </div>
-    <div class="splitter-divider"></div>
-    <div class="splitter-panel">
-        editor
+    
+    <div class="splitter-h" id="main-split"></div>
+
+    <div id="right">
+        tabz
     </div>
-    -->
 </div>
 <div id="footer"></div>
