--- a/src/sqlcode/wwwroot/app/layout.html
+++ b/src/sqlcode/wwwroot/app/layout.html
@@ -8,7 +8,7 @@
         <div class="tbarBtn align-center bottomBtn icon-menu">&nbsp;</div>
     </div>
 </div>
-<div class="" id="main" data-bla-blah="true">
+<div class="" id="main">
 
     <div id="left">
         explorer
