--- a/src/sqlcode/wwwroot/app/layout.html
+++ b/src/sqlcode/wwwroot/app/layout.html
@@ -1,11 +1,12 @@
 <div id="toolbar" class="control">
     <div>
-        <div class="tbarBtn align-center icon-doc">&nbsp;</div>
-        <div class="tbarBtn align-center icon-database">&nbsp;</div>
-        <div class="tbarBtn align-center icon-search">&nbsp;</div>
+        <div class="btn align-center icon-doc"></div>
+        <div class="btn align-center icon-database"></div>
+        <div class="btn align-center icon-search"></div>
     </div>
-    <div>
-        <div class="tbarBtn align-center bottomBtn icon-menu">&nbsp;</div>
+    <div class="bottom">
+        <div class="btn align-center icon-terminal"></div>
+        <div class="btn align-center icon-menu"></div>
     </div>
 </div>
 <div class="" id="main">
@@ -14,10 +15,11 @@
         explorer
     </div>
     
-    <div class="splitter-h" id="main-split"></div>
+    <div class="control" id="split"></div>
 
     <div id="right">
         tabz
     </div>
+
 </div>
 <div id="footer"></div>
