--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -63,6 +63,7 @@
                 libs: libs,
                 text: ["https://cdnjs.cloudflare.com/ajax/libs/require-text/2.0.12/text.min", "libs/text"],
                 spa: sysUrl,
+                sys: sysUrl,
                 template: sysUrl + "/template"
             }
         });
