--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -46,25 +46,21 @@
     <div id="app-container" style="display: none">
     </div>
 
-    <script type="text/javascript" 
-            data-main="main.js" 
-            src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js">
+    <script type="text/javascript" data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
+    <script type="text/javascript">
+        window.requirejs || document.write('<script data-main="main.js" src="' + (window._spa && window._spa.libsUrl ? window._spa.libsUrl : "") + '/require.js">\x3C/script>');
     </script>
     <script type="text/javascript">
         var libsUrl = window._spa && window._spa.libsUrl ? window._spa.libsUrl : "",
             libs = libsUrl ? "../" + libsUrl: "../libs"
-            sysUrl = (window._spa.sysPath ? window._spa.sysPath : "spa");
-        window.requirejs || 
-            document.write(
-                '<script data-main="main.js" src="' + libsUrl + '/require.js">\x3C/script>'
-            );
-        requirejs.config({
+            sysUrl = (window._spa.sysPath ? window._spa.sysPath : "spa") + "/";
+        window.requirejs.config({
             paths: {
                 libs: libs,
                 text: ["https://cdnjs.cloudflare.com/ajax/libs/require-text/2.0.12/text.min", "libs/text"],
                 spa: sysUrl,
                 sys: sysUrl,
-                template: sysUrl + "/template"
+                template: sysUrl + "template"
             }
         });
     </script>
