--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -19,7 +19,8 @@
             '<link rel="stylesheet" href="' + u + 'main.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'toolbar.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'footer.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'icons.css"' + q + '" />'
+            '<link rel="stylesheet" href="' + u + 'icons.css"' + q + '" />' +
+            '<link rel="stylesheet" href="' + u + 'panels.css"' + q + '" />'
         );
     </script>
 </head>
