add main pane grid rows

--- a/src/sqlcode/wwwroot/app/app.html
+++ b/src/sqlcode/wwwroot/app/app.html
@@ -20,7 +20,13 @@
 
     <div class="control sc-split"></div>
     
-    <div class="sc-right-pane"></div>
+    <div class="sc-right-pane">
+        
+        <div class="editor-main">editor</div>
+        <div class="control rp-split"></div>
+        <div class="results-main"></div>
+
+    </div>
 
 </div>
 
