add mocha test suite and rearange css

--- a/src/sqlcode/wwwroot/app/app.html
+++ b/src/sqlcode/wwwroot/app/app.html
@@ -10,20 +10,20 @@
     </div>
 </div>
 
-<div class="sc-container">
+<div class="container">
     
-    <div class="sc-left-pane">
+    <div class="sidebar">
         <div class="panel docs-panel"></div>
         <div class="panel db-panel"></div>
         <div class="panel search-panel"></div>
     </div>
 
-    <div class="control sc-split"></div>
+    <div class="control v-split-2"></div>
     
-    <div class="sc-right-pane">
-        <div class="editor-main">editor</div>
-        <div class="control rp-split"></div>
-        <div class="results-main"></div>
+    <div class="workbench">
+        <div class="editor">editor</div>
+        <div class="control h-split-2"></div>
+        <div class="output"></div>
     </div>
 
 </div>
