--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" id="_spa">window._spa = {version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "_sys", settings: {usePreloadedTemplates: false}};</script>
-    <script>var require = {baseUrl: window._spa.appUrl}; if (window._spa && window._spa.version) {require.urlArgs = "v=" + window._spa.version;}</script>
+    <script type="text/javascript" id="_app">
+        window._app = {version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "_sys"};
+    </script>
+    <script>var require = {baseUrl: window._app.appUrl}; if (window._app && window._app.version) {require.urlArgs = "v=" + window._app.version;}</script>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,7 +14,7 @@
     <title></title>
 
     <script id="_css">
-        var u = (window._spa.cssUrl ? window._spa.cssUrl : "") + "/", q = window._spa.version ? "?" + require.urlArgs : "";
+        var u = (window._app.cssUrl ? window._app.cssUrl : "") + "/", q = window._app.version ? "?" + require.urlArgs : "";
         document.write(
             '<link rel="stylesheet" href="' + u + 'default.css"' + q + '" />' +
             '<link rel="stylesheet" href="' + u + 'index.css"' + q + '" />' +
@@ -29,7 +31,7 @@
     <div id="loading-screen" style="display: none" class="align-center"></div>
     <script id="loading-screen-script" type="text/javascript">
         document.getElementById("loading-screen").innerHTML = "&#8987;";
-        document.write('<script src="' + (window._spa && window._spa.libsUrl ? window._spa.libsUrl : "") + '/feature-detect.js">\x3C/script>');
+        document.write('<script src="' + (window._app && window._app.libsUrl ? window._app.libsUrl : "") + '/feature-detect.js">\x3C/script>');
     </script>
     <script id="loading-screen-script" type="text/javascript">
     (function() {
@@ -49,12 +51,12 @@
 
     <script type="text/javascript" data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
     <script type="text/javascript">
-        window.requirejs || document.write('<script data-main="main.js" src="' + (window._spa && window._spa.libsUrl ? window._spa.libsUrl : "") + '/require.js">\x3C/script>');
+        window.requirejs || document.write('<script data-main="main.js" src="' + (window._app && window._app.libsUrl ? window._app.libsUrl : "") + '/require.js">\x3C/script>');
     </script>
     <script type="text/javascript">
-        var libsUrl = window._spa && window._spa.libsUrl ? window._spa.libsUrl : "",
+        var libsUrl = window._app && window._app.libsUrl ? window._app.libsUrl : "",
             libs = libsUrl ? "../" + libsUrl: "../libs"
-            sysUrl = window._spa.sysPath ? window._spa.sysPath : "_sys";
+            sysUrl = window._app.sysPath ? window._app.sysPath : "_sys";
         window.requirejs.config({
             paths: {
                 libs: libs,
