--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -46,7 +46,7 @@
     })()
     </script>
 
-    <div id="app-container" style="display: none">
+    <div class="app" style="display: none">
     </div>
 
     <script type="text/javascript" data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
