normalize pubsub messages

--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" id="_app">
-        window._app = {version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "_sys"};
+        window._app = {dev: true, version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "_sys"};
     </script>
     <script>var require = {baseUrl: window._app.appUrl}; if (window._app && window._app.version) {require.urlArgs = "v=" + window._app.version;}</script>
     
