--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -4,7 +4,12 @@
     <script type="text/javascript" id="_app">
         window._app = {dev: true, version: "", appUrl: "app", cssUrl: "css", libsUrl: "libs", sysPath: "_sys"};
     </script>
-    <script>var require = {baseUrl: window._app.appUrl}; if (window._app && window._app.version) {require.urlArgs = "v=" + window._app.version;}</script>
+    <script>
+        var require = {baseUrl: window._app.appUrl}; 
+        if (window._app && window._app.version) {
+            require.urlArgs = "v=" + window._app.version;
+        }
+    </script>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,36 +19,48 @@
     <title></title>
 
     <script id="_css">
-        var u = (window._app.cssUrl ? window._app.cssUrl : "") + "/", q = window._app.version ? "?" + require.urlArgs : "";
-        document.write(
-            '<link rel="stylesheet" href="' + u + 'default.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'index.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'main.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'toolbar.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'footer.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'icons.css"' + q + '" />' +
-            '<link rel="stylesheet" href="' + u + 'panels.css"' + q + '" />'
-        );
+        (function() {
+            var u = (window._app.cssUrl ? window._app.cssUrl : "") + "/", 
+                q = window._app.version ? "?" + require.urlArgs : "";
+            (function(ss) {
+                for (var i=0, l=ss.length; i<l; i++) {
+                    var s = document.createElement("link");
+                    s.rel  = 'stylesheet';
+                    s.type = 'text/css';
+                    s.href = u + ss[i] + q;
+                    s.media = 'all';
+                    document.head.appendChild(s);
+                }
+            })(
+                ["default.css", "main.css", "icons.css", "panels.css"]
+            );
+        })();
     </script>
+    
 </head>
 <body>
 
-    <div id="loading-screen" style="display: none" class="align-center"></div>
+    <div id="loading-screen" style="display: none;" class="align-center">
+        &#8987;
+    </div>
+
     <script id="loading-screen-script" type="text/javascript">
-        document.getElementById("loading-screen").innerHTML = "&#8987;";
-        document.write('<script src="' + (window._app && window._app.libsUrl ? window._app.libsUrl : "") + '/feature-detect.js">\x3C/script>');
-    </script>
-    <script id="loading-screen-script" type="text/javascript">
-    (function() {
-        for (var feature in Modernizr) {
-            if (!Modernizr[feature]) {
-                window.location = "/not-supported.html";
-                return;
-            }
-        }
-        var e = document.getElementById("loading-screen");
-        setTimeout(function(){e.removeAttribute("style")}, 500);
-    })()
+        (function () {
+            var s = document.createElement("script");
+            s.async = true;
+            s.src = (window._app && window._app.libsUrl ? window._app.libsUrl : "") + "/feature-detect.js";
+            document.head.appendChild(s);
+            s.onload = function() {
+                for (var feature in Modernizr) {
+                    if (!Modernizr[feature]) {
+                        window.location = "/not-supported.html";
+                        return;
+                    }
+                }
+                var e = document.getElementById("loading-screen");
+                setTimeout(function(){e.style.display = ""}, 250);
+            };
+        })();
     </script>
 
     <div class="app" style="display: none">
@@ -51,23 +68,28 @@
 
     <script type="text/javascript" data-main="main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
     <script type="text/javascript">
-        //https://blog.dareboost.com/en/2016/09/avoid-using-document-write-scripts-injection/
-        window.requirejs || document.write('<script data-main="main.js" src="' + (window._app && window._app.libsUrl ? window._app.libsUrl : "") + '/require.js">\x3C/script>');
-    </script>
-    <script type="text/javascript">
-        var libsUrl = window._app && window._app.libsUrl ? window._app.libsUrl : "",
-            libs = libsUrl ? "../" + libsUrl: "../libs"
-            sysUrl = window._app.sysPath ? window._app.sysPath : "_sys";
-        window.requirejs.config({
-            paths: {
-                libs: libs,
-                text: ["https://cdnjs.cloudflare.com/ajax/libs/require-text/2.0.12/text.min", "libs/text"],
-                spa: sysUrl,
-                sys: sysUrl,
-                template: sysUrl + "template"
+        (function () {
+            var libsUrl = window._app && window._app.libsUrl ? window._app.libsUrl : "",
+                libs = libsUrl ? "../" + libsUrl: "../libs"
+                sysUrl = window._app.sysPath ? window._app.sysPath : "_sys",
+                configure = function () {
+                    window.requirejs.config({
+                        paths: {
+                            libs: libs,spa: sysUrl,sys: sysUrl
+                        }
+                    });
+                }
+            if (window.requirejs) {
+                configure();
+                return;
             }
-        });
+            var s = document.createElement("script");
+            s.async = true;
+            s.src = libsUrl + "/require.js";
+            s.setAttribute("data-main", "main.js")
+            document.head.appendChild(s);
+            s.onload = configure;
+        })();
     </script>
-
 </body>
 </html>
