--- a/src/sqlcode/wwwroot/index.html
+++ b/src/sqlcode/wwwroot/index.html
@@ -32,7 +32,9 @@
                     document.head.appendChild(s);
                 }
             })(
-                ["default.css", "main.css", "icons.css", "panels.css", "editor-tabs.css"]
+                [
+                    "default.css", "main.css", "icons.css", "panels.css", "panel-items.css", "editor-tabs.css"
+                ]
             );
         })();
     </script>
